--- a/shopping-list/src/locales/fi.json
+++ b/shopping-list/src/locales/fi.json
@@ -24,6 +24,7 @@
   "rename": "Nimeä uudelleen",
   "products": "Tuotteet",
   "notificationsPanelTitle": "Ilmoituspaneeli",
+  "noNotificationsMessage": "Ei ilmoituksia",
   "invite": "Kutsu",
   "inviteFriend": "Kutsu ystäviä",
   "shareListDescription": "Jaa lista <0>{{listName}}</0> ystävälle kirjoittamalla hänen sähköpostiosoitteensa alle.",
@@ -43,6 +44,8 @@
   "sortByCategory": "Lajittele kategorian mukaan",
   "ascending": "Nouseva",
   "descending": "Laskeva",
+  "accept": "Hyväksy",
+  "decline": "Hylkää",
   "alcohols": "Alkoholit",
   "medical": "Lääkkeet",
   "readyMeals": "Valmisateriat",
