--- a/shopping-list/src/locales/pt.json
+++ b/shopping-list/src/locales/pt.json
@@ -24,6 +24,7 @@
   "rename": "Renomear",
   "products": "Produtos",
   "notificationsPanelTitle": "Painel de notificações",
+  "noNotificationsMessage": "Sem notificações",
   "invite": "Convidar",
   "inviteFriend": "Convidar amigos",
   "shareListDescription": "Para compartilhar a lista <0>{{listName}}</0> com um amigo, insira o endereço de e-mail dele abaixo.",
@@ -43,6 +44,8 @@
   "sortByCategory": "Ordenar por categoria",
   "ascending": "Ascendente",
   "descending": "Descendente",
+  "accept": "Aceitar",
+  "decline": "Recusar",
   "alcohols": "Bebidas alcoólicas",
   "medical": "Medicamentos",
   "readyMeals": "Refeições prontas",
