--- a/shopping-list/src/locales/ru.json
+++ b/shopping-list/src/locales/ru.json
@@ -24,6 +24,7 @@
   "rename": "Переименовать",
   "products": "Продукты",
   "notificationsPanelTitle": "Панель уведомлений",
+  "noNotificationsMessage": "Нет уведомлений",
   "invite": "Пригласить",
   "inviteFriend": "Пригласить друга",
   "shareListDescription": "Чтобы поделиться списком <0>{{listName}}</0> с другом, введите его адрес электронной почты ниже.",
@@ -33,6 +34,8 @@
   "literUnit": "Литр",
   "milliliterUnit": "Миллилитр",
   "gramUnit": "Грамм",
+  "accept": "Принять",
+  "decline": "Отклонить",
   "alcohols": "Алкоголь",
   "medical": "Медицинское",
   "readyMeals": "Готовые блюда",
