--- a/shopping-list/src/locales/da.json
+++ b/shopping-list/src/locales/da.json
@@ -24,6 +24,7 @@
   "rename": "Omdøb",
   "products": "Produkter",
   "notificationsPanelTitle": "Notifikationspanel",
+  "noNotificationsMessage": "Ingen meddelelser",
   "invite": "Inviter",
   "inviteFriend": "Inviter venner",
   "shareListDescription": "For at dele listen <0>{{listName}}</0> med en ven, indtast deres e-mailadresse nedenfor.",
@@ -43,6 +44,8 @@
   "sortByCategory": "Sorter efter kategori",
   "ascending": "Stigende",
   "descending": "Faldende",
+  "accept": "Accepter",
+  "decline": "Afslå",
   "alcohols": "Alkohol",
   "medical": "Medicinsk",
   "readyMeals": "Færdigretter",
