--- a/shopping-list/src/locales/nl.json
+++ b/shopping-list/src/locales/nl.json
@@ -24,6 +24,7 @@
   "rename": "Hernoemen",
   "products": "Producten",
   "notificationsPanelTitle": "Meldingen",
+  "noNotificationsMessage": "Geen meldingen",
   "invite": "Uitnodigen",
   "inviteFriend": "Vrienden uitnodigen",
   "shareListDescription": "Om de lijst <0>{{listName}}</0> te delen met een vriend, voer hieronder hun e-mailadres in.",
@@ -43,6 +44,8 @@
   "sortByCategory": "Sorteren op categorie",
   "ascending": "Oplopend",
   "descending": "Aflopend",
+  "accept": "Accepteren",
+  "decline": "Weigeren",
   "alcohols": "Alcohol",
   "medical": "Medisch",
   "readyMeals": "Kant-en-klaarmaaltijden",
