--- a/shopping-list/src/locales/pl.json
+++ b/shopping-list/src/locales/pl.json
@@ -24,6 +24,7 @@
   "rename": "Zmień nazwę",
   "products": "Produkty",
   "notificationsPanelTitle": "Panel powiadomień",
+  "noNotificationsMessage": "Brak powiadomień",
   "invite": "Zaproś",
   "inviteFriend": "Zaproś znajomych",
   "shareListDescription": "Aby udostępnić listę <0>{{listName}}</0> znajomemu, wprowadź jego adres e-mail poniżej.",
@@ -43,6 +44,8 @@
   "sortByCategory": "Sortuj według kategorii",
   "ascending": "Rosnąco",
   "descending": "Malejąco",
+  "accept": "Zaakceptuj",
+  "decline": "Odrzuć",
   "alcohols": "Alkohole",
   "medical": "Medyczne",
   "readyMeals": "Gotowe posiłki",
